[package]
name = "vpn_endpoint"
version = "0.9.16"
authors = ["Sergei Gunchenko <s.gunchenko@adguard.com>"]
edition = "2021"

[[bin]]
name = "vpn_endpoint"
doctest = false

[workspace]
# The empty workspace prevents redundant builds of each component

[dependencies]
vpn_libs_endpoint = { version = "0.1", path = "lib" }
chrono = "0.4"
log = "0.4"
serde_json = "1.0"
clap = "3.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "signal"] }
sentry = { version = "0.25.0", default-features = false, features = ["backtrace", "panic", "reqwest", "rustls", "contexts"] }
once_cell = "1.12.0"
