[package]
name = "vpn_endpoint"
version = "0.9.41"
authors = ["Sergei Gunchenko <s.gunchenko@adguard.com>"]
edition = "2021"

[[bin]]
name = "vpn_endpoint"
doctest = false

[workspace]
# The empty workspace prevents redundant builds of each component

[dependencies]
vpn_libs_endpoint = { version = "0.1", path = "lib" }
log = "0.4"
serde_json = "1.0"
clap = "=4.1.4"
tokio = { version = "=1.25.0", features = ["rt-multi-thread", "signal"] }
sentry = { version = "=0.29.3", default-features = false, features = ["backtrace", "panic", "reqwest", "rustls", "contexts"] }
console-subscriber = { version = "=0.1.8", optional = true }

[features]
# RUSTFLAGS="--cfg tokio_unstable" must also be set
tracing = ["vpn_libs_endpoint/tracing", "tokio/tracing", "dep:console-subscriber"]
