[package]
name = "trusttunnel_endpoint"
version = "0.9.104"
authors = ["Sergei Gunchenko <s.gunchenko@adguard.com>"]
edition = "2021"

[[bin]]
name = "trusttunnel_endpoint"
doctest = false

[dependencies]
clap = "4.5"
console-subscriber = { version = "0.1.9", optional = true }
log = "0.4.19"
nix = { version = "0.28.0", features = ["resource"] }
sentry = { version = "0.46.0", default-features = false, features = ["backtrace", "panic", "reqwest", "rustls", "contexts"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "signal"] }
toml = { version = "0.7.4", default-features = false, features = ["parse"] }
trusttunnel = { version = "0.1", path = "../lib" }

[features]
# RUSTFLAGS="--cfg tokio_unstable" must also be set
tracing = ["trusttunnel/tracing", "tokio/tracing", "dep:console-subscriber"]
